--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "jade-var-matter",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Like front-matter, except for Jade files",
-  "keywords": [ "front-matter", "jade" ],
+  "keywords": [
+    "front-matter",
+    "jade"
+  ],
   "author": "Jess Austin <jess.austin@gmail.com>",
   "license": "MIT",
   "repository": {
-    "type": "git", "url": "http://github.com/jessaustin/jade-var-matter.git"
+    "type": "git",
+    "url": "http://github.com/jessaustin/jade-var-matter.git"
   },
   "homepage": "https://github.com/jessaustin/jade-var-matter",
   "devDependencies": {
-    "coffee-script": ">=1.7", "tape": ">=2.14"
+    "coffee-script": ">=1.7",
+    "tape": ">=2.14"
   },
   "main": "jade-var-matter.js",
   "scripts": {
